# project

./: .gitignore
back/: .env  alembic.ini  pyproject.toml  requirements.txt
back/app/: main.py
back/app/controller/admin/: users.py
back/app/controller/public/: authentication.py  profile.py
back/app/core/: config.py
back/app/model/: __init__.py  mixins.py  profile.py  role.py  user.py  user_role.py  users.py
back/app/repository/: auth_repository.py  base_repo.py  profile.py  profile_repository.py  role.py  role_repository.py  user_repository.py  user_role_repository.py  users.py  users_repository.py
back/app/schema/: forgot_schema.py  login_schema.py  register_schema.py  response_schema.py  user_role_request_schema.py
back/app/service/admin/: users_service.py
back/app/service/public/: auth_service.py  profile.py
back/migrations/: env.py
back/migrations/versions/: 286fcfdecb3e_initial_migration.py  37cb935d2c22_initial_migrations.py  ba308b83d22e_initial_migrations.py
front/: package.json  tailwind.config.js
front/public/: index.html
front/public/css/: style-uk.css  style.css
front/src/: App.js  App.jsx  index.css  index.js
front/src/components/layouts/AdminLayout/: AdminLayout.jsx
front/src/form/: ForgotForm.js  ForgotForm.jsx  LoginForm.js  LoginForm.jsx  RegisterForm.js  RegisterForm.jsx
front/src/hoc/: AuthProvider.jsx  RequireAuth.jsx
front/src/hook/: useAuth.js
front/src/pages/public/Auth/: Auth.js  (+1 more)
front/src/utils/: PrivateRoute.jsx  detectDarkMode.js  detectDarkMode.jsx  privateRouter.jsx  scrollToTop.jsx  useLocalStorage.jsx
(+30 files in other folders)
